tests/baselines/reference/decoratorOnClassAccessor3.errors.txt
decoratorOnClassAccessor3.ts(4,12): error TS1436: Decorators must precede the name and all keywords of property declarations.


==== decoratorOnClassAccessor3.ts (1 errors) ====
    declare function dec<T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>): TypedPropertyDescriptor<T>;
    
    class C {
        public @dec get accessor() { return 1; }
               ~
!!! error TS1436: Decorators must precede the name and all keywords of property declarations.
    }